--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,36 @@
-alembic==1.10.4
-blinker==1.6.2
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-dnspython==2.3.0
-email-validator==2.0.0.post2
+alembic
+blinker
+certifi
+charset-normalizer
+click
+colorama
+dnspython
+email-validator
 Flask
 Flask-Login
 Flask-Migrate
 Flask-SQLAlchemy
 Flask-WTF
-greenlet==2.0.2
-gunicorn==20.1.0
-idna==3.4
-importlib-metadata==6.6.0
+greenlet
+gunicorn
+idna
+importlib-metadata
 itsdangerous
-Jinja2==3.1.2
-Mako==1.2.4
-MarkupSafe==2.1.2
-marshmallow==3.11.1
+Jinja2
+Mako
+MarkupSafe
+marshmallow
 numpy
-pandas==2.0.1
+pandas
 psycopg2
-python-dateutil==2.8.2
+python-dateutil
 python-dotenv
-pytz==2023.3
-six==1.16.0
-SQLAlchemy==2.0.12
-typing-extensions==4.5.0
-tzdata==2023.3
-urllib3==2.0.2
-Werkzeug==2.3.4
+pytz
+six
+SQLAlchemy
+typing-extensions
+tzdata
+urllib3
+Werkzeug
 WTForms
-zipp==3.15.0
+zipp
